Fixing css properties for Resume section on mobile

--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -339,7 +339,7 @@ label {
     }
 
     .aboutResume {
-        height: 35vh;
+        height: auto;
         width: auto;
     }
 
